--- a/Entidades para PARCIAL 2/Entidades/Entidades/Entidades.csproj
+++ b/Entidades para PARCIAL 2/Entidades/Entidades/Entidades.csproj
@@ -42,9 +42,22 @@
   <ItemGroup>
     <Compile Include="AdministradorDeArchivos.cs" />
     <Compile Include="DB.cs" />
+    <Compile Include="DB_2.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
